--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,7 @@
 body {
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
+
 }
 
 a {
@@ -18,12 +19,13 @@ a {
     padding-left: 103px;
     position: relative;
     display: inline-block;
+
     &::before {
         content: "";
         position: absolute;
         width: 80px;
         height: 1px;
-        background-color: #ffffff;
+        background-color: #fff;
         left: 0;
         top: 50%;
     }
