--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -52,7 +52,7 @@
 
 .slider-arrows {
     position: absolute;
-    top: 40px;
+    top: 36px;
     right: 80px;
     cursor: pointer;
     z-index: 4;
@@ -64,16 +64,111 @@
 
 .slider-dots {
     position: absolute;
-    right: 80px;
+    right: 50px;
+    bottom: 40px;
+    max-width: 920px;
+    width: 100%;
+    color: #fff;
+    .slick-current {
+        .dots-box {
+            border-top: 4px solid $green;
+        }
+    }
 }
 
-// 1 hr 11 sec
+.dots-box {
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    height: 28px;
+    align-items: center;
+    border-top: 4px solid #fff;
+    padding-top: 6px;
+    &__number {
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 34px;
+    }
+    &__name {
+        line-height: 19px;
+    }
+}
 
+.header__aside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    border-right: 1px solid rgba(#fff, 0.25);
+    height: 100vh;
+    text-align: center;
+    color: #fff;
+}
 
+.header__title {
+    font-size: 200px;
+    line-height: 156px;
+    text-transform: uppercase;
+    color: #fff;
+    opacity: 0.07;
+    font-weight: 800;
+    max-width: 467px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    margin-bottom: 119px;
+}
 
+.menu {
+    a {
+        color: #fff;
+        span {
+            display: block;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 14px;
+            letter-spacing: 3px;
+            color: #ffffff;
+            padding-top: 6px;
+            margin-bottom: 37px;
+        }
+    }
+}
 
+.header__date {
+    font-weight: 800;
+    font-size: 72px;
+    line-height: 64px;
+    text-transform: uppercase;
+    span {
+        padding-top: 15px;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: 1.4px;
+        margin-bottom: 30px;
+        display: block;
+    }
+}
 
-
-
+.header__location {
+    display: inline-block;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 1.05px;
+    position: relative;
+    padding-left: 19px;
+    &::before {
+        content: "";
+        position: absolute;
+        width: 11px;
+        height: 13px;
+        background-image: url(../image/marker.svg);
+        left: 0;
+        top: 0;
+    }
+}
 
 @import "media";
